# hexlet_pytest

./: README.rst  pyproject.toml
tests/: test_example.py  test_stack.py
