[tool.poetry]
name = "hexlet_pytest"
version = "0.1.0"
description = ""
authors = ["Evchik <elcric66@gmail.com>"]

packages = [
    {include = 'hexlet_pytest'}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
